# sepulchral-fizz

./: .gitignore  .nojekyll  README.md  _quarto.yml  hello.py  index.html  index.qmd  main.py  pyproject.toml  robots.txt  search.json  sitemap.xml
notes/: 00-intro.html  00-intro.qmd
src/: char_desc_gemini.py  char_desc_gemma-chunking.py  char_desc_gemma.py  fetch_description.py  fetch_novel.py  test_gemini.py  tokenizer.py
