[project]
name = "ardent-shadow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "gutenbergpy>=0.3.5",
    "huggingface-hub>=0.29.1",
    "langchain-ollama>=0.2.3",
    "llama-cpp-python>=0.3.7",
    "llm>=0.21",
    "llm-gemini>=0.10",
    "llm-gguf>=0.2",
    "llm-ollama>=0.8.2",
    "ollama",
    "pandas>=2.2.3",
    "pyright>=1.1.393",
    "python-dotenv>=1.0.1",
    "tokenizers>=0.21.0",
    "waybackpy>=3.0.6",
]
